Add configuration.ini allowing for ignoring certain disk letters and custom roms location

--- a/configuration.ini
+++ b/configuration.ini
@@ -25,9 +25,11 @@ ignore_local_disk=1
 
 [PATH]
 ; Tells ROM-LINKER where the roms folder that will be modified is located
-; If you want to run this script from another location, you can use the absolute path like "X:/emulator/roms"
+; If you want to run this script from another location, you can use the absolute path like "X:/emulator/roms/"
+; It needs to end with / otherwise it will f* up the symlink
 internal_roms_path=./roms/
 
 ; Tells ROM-LINKER the name of the folder to scan inside external disks
-; If you external roms are in a different folder you can edit it, like "/stuff/games/roms"
+; If you external roms are in a different folder you can edit it, like "/stuff/games/roms/"
+; It needs to end with / otherwise it will f* up the symlink
 external_roms_path=/roms/
