Barebones development of a ROMS_FILE scan

--- a/configuration.ini
+++ b/configuration.ini
@@ -9,6 +9,16 @@
 ; Empty [] means all disks will be scanned
 scan_disks=[]
 
+; The functioning mode can be one of two options:
+; FOLDER_PATH - It will look for the rom folder configured in the external_roms_path configuration entry
+; ROMS_FILE - It will look for the folder which contains a file named "ROM_PATH"
+scan_mode=ROMS_FILE
+
+; [THIS WILL ONLY WORK WITH ROMS_FILE SETTING]
+; The scan depth configures how many folders inside folders the script will look into.
+; If your rom file is in a path f1/f2/f3/ROM_PATH, it will need a depth of 3 to find it.
+roms_file_scan_depth=3
+
 [IGNORE]
 ; The next line tells ROM-LINKER to skip certain drives
 ; Example let's say I want to skip the C: drive, it will look like ignore_disks=["C"]
