Add small info in configuration.ini

--- a/configuration.ini
+++ b/configuration.ini
@@ -1,6 +1,7 @@
 ; REMOVE THE SEMICOLON AT THE BEGINNING OF THE LINE IF YOU WANT TO USE IT
 
-; IF YOU INCLUDE A X: DISK AND ADD IT TO "ignore_disks" OR if it is the local disk and "ignore_local_disk=true" IT WILL IGNORE IT
+; IF YOU INCLUDE A "X:" DISK TO "scan_disks" AND ADD IT TO "ignore_disks"
+; OR if it is the local disk and "ignore_local_disk=true" IT WILL IGNORE IT
 ; IN OTHER WORDS: ROM-LINKER GIVES PRIORITY TO THE [IGNORE] SECTION
 
 [SCAN]
