Allow for auto-close. default=10 seconds

--- a/configuration.ini
+++ b/configuration.ini
@@ -38,3 +38,10 @@ internal_roms_path=./roms/
 ; If you external roms are in a different folder you can edit it, like "/stuff/games/roms/"
 ; It needs to end with / otherwise it will f* up the symlink
 external_roms_path=/roms/
+
+[OPTIONS]
+# Closes the script after it finishes running, will happen on both success and failure
+auto_close=1
+
+# Configures how many seconds the script will wait before closing after it has been executed
+auto_close_seconds=10
